--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "pg": "^8.12.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
-    "typeorm": "^0.3.20"
+    "typeorm": "^0.3.20",
+    "typeorm-extension": "^3.5.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
