--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,18 @@
+version: '3.8'
+
 services:
-#   app:
-#     container_name: backend
-#     hostname: app
-#     build:
-#       context: .
-#     env_file:
-#       - ./.env
-#     ports:
-#       - "3030:3030"
-#     restart: always
-#     depends_on:
-#       - db
+  # app:
+  #   container_name: backend
+  #   hostname: app
+  #   build:
+  #     context: .
+  #   env_file:
+  #     - ./.env
+  #   ports:
+  #     - "3030:3030"
+  #   restart: always
+  #   depends_on:
+  #     - db
 
   db:
     image: postgres
@@ -25,6 +27,22 @@ services:
       - 5432:5432
     restart: always
 
+  pgadmin:
+    image: dpage/pgadmin4
+    container_name: "pgadmin"
+    environment:
+      PGADMIN_DEFAULT_EMAIL: admin@teste.com
+      PGADMIN_DEFAULT_PASSWORD: admin
+    ports:
+      - "8080:80"
+    volumes:
+      - pgadmin_data:/var/lib/pgadmin
+    restart: always
+    depends_on:
+      - db
+
 volumes:
   postgres_data:
+    driver: local
+  pgadmin_data:
     driver: local
