--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,18 @@
 version: '3.8'
 
 services:
-  # app:
-  #   container_name: backend
-  #   hostname: app
-  #   build:
-  #     context: .
-  #   env_file:
-  #     - ./.env
-  #   ports:
-  #     - "3030:3030"
-  #   restart: always
-  #   depends_on:
-  #     - db
+  app:
+    container_name: backend
+    hostname: app
+    build:
+      context: .
+    env_file:
+      - ./.env
+    ports:
+      - "3030:3030"
+    restart: always
+    depends_on:
+      - db
 
   db:
     image: postgres
@@ -20,7 +20,7 @@ services:
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: P@ssW0rd
-      POSTGRES_DB: app_db
+      POSTGRES_DB: postgres
     volumes:
       - postgres_data:/var/lib/postgresql/data
     ports:
